--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -1,5 +1,5 @@
 ---
-const { title, img, desc, url, badge, tags, target = "_blank" } = Astro.props;
+const { title, img, desc, url, ul, badge, tags, target = "_blank" } = Astro.props;
 import { Image } from "astro:assets";
 const tag_url = url.split("/").slice(0, -1).join("/") + "/tag";
 ---
@@ -27,6 +27,14 @@ const tag_url = url.split("/").slice(0, -1).join("/") + "/tag";
           {badge && <div class="badge badge-secondary mx-2">{badge}</div>}
         </h1>
         <p class="py-1 text-1xl">{desc}</p>
+        {/* Vérifie si ul existe et a des éléments à afficher */}
+        {ul && ul.length > 0 && (
+          <ul>
+            {ul.map((item) => (
+              <li>{item}</li>
+            ))}
+          </ul>
+        )}
         <div class="card-actions justify-end">
           {
             tags &&
