--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,12 @@ const last_posts = posts.slice(0, 3);
   <div class="pb-12 mt-5">
     
     <div class="text-5xl font-bold">Je suis Soumaya</div>
-    <div class="text-3xl py-3 font-bold">Etudiante en 3 ème années</div>
+    <div class="text-3xl py-3 font-bold">Etudiante en 3 ème années de BUT informatique</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+         au sein de l'Université Paul Sabatier de Toulouse. 
+         Créative et débrouillarde, je saurai apporter de nouvelles idées aux projets qui me seront délégués pour le poste intégrateur web. 
+         Mes nombreux projets m'ont permis de développer mon esprit d'équipe et d'être polyvalente, ainsi, je réaliserai des missions pour l'entreprise. 
       </text>
     </div>
     <div class="mt-8">
