--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,5 @@
 ---
-const { title, img, desc, url, badge, tags, target = "_blank" } = Astro.props;
+const { title, img, ul, li, desc, url, badge, tags, target = "_blank" } = Astro.props;
 import { Image } from "astro:assets";
 ---
 
