--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
+const { sideBarActiveItemID } = Astro.props;
 ---
 
 <BaseLayout title="Projects" sideBarActiveItemID="services">
@@ -8,50 +9,160 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <div class="text-5xl w-full font-bold mb-5">Mes compétences</div>
   </div>
   <div>
-    <div class="text-3xl w-full font-bold mb-5">BUT1</div>
+    <div class="text-3xl w-full font-bold mb-5">BUT Informatique</div>
   </div>
 
   <HorizontalCard
+    title="Développer, c'est-à-dire concevoir, coder, tester et intégrer une solution informatique pour un client."
+    img="/Realiser.png"
+    desc=""
+    badge=""
+    url="#"
+  />
+  <HorizontalCard
     title="Réaliser"
-    img="/post_img.webp"
-    desc="Dévolopper des applications informatiques simples"
+    img="/Realiser_niveau1.png"
+    ul="<li>Implémenter des conceptions simples.</li>
+      <li>Élaborer des conceptions simples.</li>
+      <li>Faire des essais et évaluer leurs résultats en regard des spécifications.</li>
+      <li>Développer des interfaces utilisateurs.</li>"
     badge="NEW"
     url="#"
   />
+  <HorizontalCard
+    title="Réaliser"
+    img="/Realiser_niveau2.png"
+    desc="-Implémenter des conceptions simples.- Élaborer des conceptions simples. - Faire des essais et évaluer leurs résultats en regard des spécifications. - Développer des interfaces utilisateurs."
+
+    badge="NEW"
+    url="#"
+  />
+
   <div class="divider my-0"></div>
+
   <HorizontalCard
     title="Optimiser"
-    img="/post_img.webp"
+    img="/Optimiser.png"
     desc="Appréhender et construire des algorithmes"
     url="#"
   />
+  <HorizontalCard
+    title="Optimiser"
+    img="/Optimiser_niveau1.png"
+    desc="Appréhender et construire des algorithmes"
+    url="#"
+  />
+  <HorizontalCard
+    title="Optimiser"
+    img="/Optimiser_niveau2.png"
+    desc="Appréhender et construire des algorithmes"
+    url="#"
+  />
+
   <div class="divider my-0"></div>
+
   <HorizontalCard
     title="Administrer"
-    img="/post_img.webp"
+    img="/Administrer.png"
     desc="Installer et configurer un poste de travail"
     url="#"
     badge="NEW"
   />
+  <HorizontalCard
+    title="Administrer"
+    img="/Administrer_niveau1.png"
+    desc="Installer et configurer un poste de travail"
+    url="#"
+    badge="NEW"
+  />
+  <HorizontalCard
+    title="Administrer"
+    img="/Administrer_niveau2.png"
+    desc="Installer et configurer un poste de travail"
+    url="#"
+    badge="NEW"
+  />
+
   <div class="divider my-0"></div>
+
   <HorizontalCard
     title="Gérer"
-    img="/post_img.webp"
+    img="/Gerer.png"
     desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
     url="#"
   />
+  <HorizontalCard
+    title="Gérer"
+    img="/Gerer_niveau1.png"
+    desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
+    url="#"
+  />
+  <HorizontalCard
+    title="Gérer"
+    img="/Gerer_niveau2.png"
+    desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
+    url="#"
+  />
+  <HorizontalCard
+    title="Gérer"
+    img="/Gerer_niveau3.png"
+    desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
+    url="#"
+  />
+
   <div class="divider my-0"></div>
+
   <HorizontalCard
     title="Conduire"
-    img="/post_img.webp"
+    img="/Conduire.png"
     desc="Identifier les besoins métiers des clients et des utilisateurs"
     url="#"
   />
+  <HorizontalCard
+    title="Conduire"
+    img="/Conduire_niveau1.png"
+    desc="Identifier les besoins métiers des clients et des utilisateurs"
+    url="#"
+  />
+  <HorizontalCard
+    title="Conduire"
+    img="/Conduire_niveau2.png"
+    desc="Identifier les besoins métiers des clients et des utilisateurs"
+    url="#"
+  />
+  <HorizontalCard
+    title="Conduire"
+    img="/Conduire_niveau3.png"
+    desc="Identifier les besoins métiers des clients et des utilisateurs"
+    url="#"
+  />
+
   <div class="divider my-0"></div>
+
   <HorizontalCard
     title="Collaborer"
-    img="/post_img.webp"
+    img="/Collaborer.png"
     desc="Identifier ses aptitudes pour travailler dans une équipe"
     url="#"
   />
+  <HorizontalCard
+    title="Collaborer"
+    img="/Collaborer_niveau1.png"
+    desc="Identifier ses aptitudes pour travailler dans une équipe"
+    url="#"
+  />
+  <HorizontalCard
+    title="Collaborer"
+    img="/Collaborer_niveau2.png"
+    desc="Identifier ses aptitudes pour travailler dans une équipe"
+    url="#"
+  />
+  <HorizontalCard
+    title="Collaborer"
+    img="/Collaborer_niveau3.png"
+    desc="Identifier ses aptitudes pour travailler dans une équipe"
+    url="#"
+  />
+  
+
 </BaseLayout>
