--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -22,10 +22,7 @@ const { sideBarActiveItemID } = Astro.props;
   <HorizontalCard
     title="Réaliser"
     img="/Realiser_niveau1.png"
-    ul="<li>Implémenter des conceptions simples.</li>
-      <li>Élaborer des conceptions simples.</li>
-      <li>Faire des essais et évaluer leurs résultats en regard des spécifications.</li>
-      <li>Développer des interfaces utilisateurs.</li>"
+    desc=""
     badge="NEW"
     url="#"
   />
