--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,10 +4,10 @@ const today = new Date();
 
 <footer class="footer footer-center block mb-5 pt-10">
   <div class="pb-2">
-    &copy; {today.getFullYear()}
+   Soumaya Seddiki  &copy; {today.getFullYear()}
   </div>
   <div class="inline opacity-75">
-    Developed by <a href="https://manuelernestog.github.io" target="_blank" class="font-bold"></a> using
+    Developed by manuelernestog<a href="https://manuelernestog.github.io" target="_blank" class="font-bold"></a> using
     <!-- Thanks for using this template. You can keep this line to support my work :) -->
     <a href="https://astrofy-template.netlify.app/" target="_blank" class="font-bold">Astrofy Template ⚡️</a>
   </div>
