--- a/src/components/cv/TimeLine.astro
+++ b/src/components/cv/TimeLine.astro
@@ -1,5 +1,5 @@
 ---
-const { title, subtitle } = Astro.props;
+const { title, subtitle, h4} = Astro.props;
 ---
 
 <div class="flex">
@@ -9,6 +9,7 @@ const { title, subtitle } = Astro.props;
   </div>
   <div class="experience__data bd-grid px-5">
     <h3 class="font-semibold mb-1">{title}</h3>
+    <h4 class="font-semibold mb-1">{h4}</h4>
     <span class="font-light text-sm">{subtitle}</span>
     <p class="my-2 text-justify">
       <slot />
