--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,7 +9,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
   <div class="mb-10 text-justify">
      Étudiante en 2ème année de BUT informatique au sein de l'Université Paul Sabatier de Toulouse. 
-     Créative et débrouillarde, je saurai apporter de nouvelles idées aux projets qui me seront délégués pour le poste intégrateur web. 
+     Créative et débrouillarde, je saurai apporter de nouvelles idées aux projets qui me seront délégués. 
      Mes nombreux projets m'ont permis de développer mon esprit d'équipe et d'être polyvalente, ainsi, 
      je réaliserai des missions pour l'entreprise. 
   </div>
