--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const last_posts = posts.slice(0, 3);
     <div class="py-2">
       <text class="text-lg">
          au sein de l'Université Paul Sabatier de Toulouse. 
-         Créative et débrouillarde, je saurai apporter de nouvelles idées aux projets qui me seront délégués pour le poste intégrateur web. 
+         Créative et débrouillarde, je saurai apporter de nouvelles idées aux projets qui me seront délégués. 
          Mes nombreux projets m'ont permis de développer mon esprit d'équipe et d'être polyvalente, ainsi, je réaliserai des missions pour l'entreprise. 
       </text>
     </div>
