--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,38 +9,38 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="SAE BUT2"
+    img="/SAE_BUT2.png"
+    desc="Création d'une application pour un client."
     url="#"
-    badge="NEW"
+    badge="JAVA , OracleSQL, PLSQL, WindowBuilder"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="SAE BUT1"
+    img="/SAE_BUT1_machinevirtuel.png"
+    desc="installation et configuration d'un poste de travail"
     url="#"
   />
-
   <HorizontalCard
-    title="Demo Project 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="SAE semestre 4 BUT2"
+    img="/SAE_BUT2-4.png"
+    desc="Visualiser les données 'brutes'"
+    url="#"
+  />
+  <HorizontalCard
+    title="SAE semestre 2 BUT1"
+    img="/SAE_BUT1S2_cachier_charges.png"
+    desc="Projet organisation d'un triatlon"
     url="#"
     badge="FOSS"
   />
   <div class="divider my-0"></div>
-  <HorizontalCard
-    title="Demo Project 4"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-  />
+  
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 5"
-    img="/post_img.webp"
+    title="SAE semestre 4 BUT2"
+    img="/SAE_BUT2-3.png"
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
   />
