--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -20,7 +20,7 @@ const { sideBarActiveItemID } = Astro.props;
     url="#"
   />
   <HorizontalCard
-    title="Réaliser"
+    title=""
     img="/Realiser_niveau1.png"
     ul={[
     "- AC1 1.01 | Implémenter des conceptions simples.",
@@ -28,11 +28,11 @@ const { sideBarActiveItemID } = Astro.props;
     "- AC1 1.0 3 | Faire des essais et évaluer leurs résultats en regard des spécifications.",
     "- AC1 1.0 4 | Développer des interfaces utilisateurs."
     ]}
-    badge="SAE"
+    badge=""
     url="#"
   />
   <HorizontalCard
-    title="Réaliser"
+    title=""
     img="/Realiser_niveau2.png"
     ul={[
     "- AC2 1.0 1 | Élaborer et implémenter les spécifications fonctionnelles et non fonctionnelles à partir des exigences.",
@@ -40,133 +40,195 @@ const { sideBarActiveItemID } = Astro.props;
     "- AC2 1.0 3 | Adopter de bonnes pratiques de conception et de programmation.",
     "- AC2 1.0 4 | Vérifier et valider la qualité de l’application par les tests."
     ]}
-    badge="SAE"
+    badge=""
     url="#"
   />
-
+  <div class="divider my-0"></div>
   <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="Optimiser"
+    title="Proposer des applications informatiques optimisées en fonction de critères spécifiques : temps d’exécution, précision, consommation de ressources."
     img="/Optimiser.png"
-    desc="Proposer des applications informatiques optimisées en fonction de critères spécifiques : temps d’exécution, précision, consommation de ressources."
     url="#"
   />
   <HorizontalCard
-    title="Optimiser"
+    title=""
     img="/Optimiser_niveau1.png"
-    desc="AC1 2.0 1 | Analyser un problème avec méthode (découpage en éléments algorithmiques simples, structure de données). AC1 2.0 2 | Comparer des algorithmes pour des problèmes classiques (tris simples, recherche). AC1 2.0 3 | Formaliser et mettre en œuvre des outils mathématiques pour l’informatique"
+    ul={[
+      "- AC1 2.0 1 | Analyser un problème avec méthode",
+      "- AC1 2.0 2 | Comparer des algorithmes pour des problèmes classiques",
+      "- AC1 2.0 3 | Formaliser et mettre en œuvre des outils mathématiques pour l’informatique"
+    ]}
     url="#"
   />
   <HorizontalCard
-    title="Optimiser"
+    title=""
     img="/Optimiser_niveau2.png"
-    desc="AC2 2.0 1 | Choisir des structures de données complexes adaptées au problème. AC2 2.0 2 | Utiliser des techniques algorithmiques adaptées pour des problèmes complexes (par ex. recherche opérationnelle, méthodes arborescentes, optimisation globale, intelligence artificielle). AC2 2.0 3 | Comprendre les enjeux et moyens de sécurisation des données et du code. AC2 2.0 4 | Évaluer l’impact environnemental et sociétal des solutions proposées"
+    ul={[
+      "- AC2 2.0 1 | Choisir des structures de données complexes adaptées au problème.", 
+      "- AC2 2.0 2 | Utiliser des techniques algorithmiques adaptées pour des problèmes complexes",
+      "- AC2 2.0 3 | Comprendre les enjeux et moyens de sécurisation des données et du code.", 
+      "- AC2 2.0 4 | Évaluer l’impact environnemental et sociétal des solutions proposées"
+    ]}
     url="#"
   />
-
+  <div class="divider my-0"></div>
   <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="Administrer"
+    title="Installer, configurer, mettre à disposition, maintenir en conditions opérationnelles des infrastructures, des services et des réseaux et optimiser le système informatique d’une organisation."
     img="/Administrer.png"
-    desc="Installer et configurer un poste de travail"
+    desc=""
     url="#"
-    badge="NEW"
   />
   <HorizontalCard
-    title="Administrer"
+    title=""
     img="/Administrer_niveau1.png"
-    desc="Installer et configurer un poste de travail"
+    ul={[   
+      "- AC1 3.0 1 | Identifier les différents composants d’un système numérique",
+      "- AC1 3.0 2 | Utiliser les fonctionnalités de base d’un système multitâches/multiutilisateurs",
+      "- AC1 3.0 3 | Installer et configurer un système d’exploitation et des outils de développement",
+      "- AC1 3.0 4 | Configurer un poste de travail dans un réseau d’entreprise"
+    ]}
     url="#"
-    badge="NEW"
+    badge=""
   />
   <HorizontalCard
-    title="Administrer"
+    title=""
     img="/Administrer_niveau2.png"
-    desc="Installer et configurer un poste de travail"
+    ul={[
+      "- AC2 3.0 1 | Concevoir et développer des applications communicantes",
+      "- AC2 3.0 2 | Utiliser des serveurs et des services réseaux virtualisés",
+      "- AC2 3.0 3 | Sécuriser les services et données d’un système"
+    ]}
     url="#"
-    badge="NEW"
+    badge=""
   />
 
   <div class="divider my-0"></div>
+  <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="Gérer"
+    title="Concevoir, gérer, administrer et exploiter les données de l’entreprise et mettre à disposition toutes les informations pour un bon pilotage de l’entreprise."
     img="/Gerer.png"
-    desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
+    desc=""
     url="#"
   />
   <HorizontalCard
-    title="Gérer"
+    title=""
     img="/Gerer_niveau1.png"
-    desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
+    ul={[
+      "- AC1 4.0 1 | Mettre à jour et interroger une base de données relationnelle (en requêtes directes ou à travers une application)",
+      "- AC1 4.0 2 | Visualiser des données",
+      "- AC1 4.0 3 | Concevoir une base de données relationnelle à partir d’un cahier des charges"
+    ]}
     url="#"
   />
   <HorizontalCard
-    title="Gérer"
+    title=""
     img="/Gerer_niveau2.png"
-    desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
+    ul={[
+      "- AC2 4.0 1 | Optimiser les modèles de données de l’entreprise",
+      "- AC2 4.0 2 | Assurer la sécurité des données (intégrité et confidentialité)",
+      "- AC2 4.0 3 | Organiser la restitution de données à travers la programmation et la visualisation",
+      "- AC2 4.0 4 | Manipuler des données hétérogènes"
+    ]}
     url="#"
   />
   <HorizontalCard
-    title="Gérer"
+    title=""
     img="/Gerer_niveau3.png"
-    desc="Concevoir et mettre en place une base de données à partir d'un cachier des charges client"
+    
+    ul={[
+      "- AC3 4.0 1 | Capturer et stocker des ensembles volumineux et complexes de données hétérogènes",
+      "- AC3 4.0 2 | Préparer et extraire les données pour l’exploitation",
+      "- AC3 4.0 3 | Appliquer des méthodes d’exploration et d’exploitation des données",
+      "- AC3 4.0 4 | Mettre en production et optimiser les systèmes de gestion de données de l’entreprise"
+    ]}
     url="#"
   />
 
   <div class="divider my-0"></div>
+  <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="Conduire"
+    title="Satisfaire les besoins des utilisateurs au regard de la chaîne de valeur du client, organiser et piloter un projet informatique avec des méthodes classiques ou agiles."
     img="/Conduire.png"
-    desc="Identifier les besoins métiers des clients et des utilisateurs"
+    desc=""
     url="#"
   />
   <HorizontalCard
-    title="Conduire"
+    title=""
     img="/Conduire_niveau1.png"
-    desc="Identifier les besoins métiers des clients et des utilisateurs"
+    ul={[
+      "- AC1 5.0 1 | Appréhender les besoins du client et de l'utilisateur",
+      "- AC1 5.0 2 | Mettre en place les outils de gestion de projet",
+      "- AC1 5.0 3 | Identifier les acteurs et les différentes phases d’un cycle de développement"
+    ]}
     url="#"
   />
   <HorizontalCard
-    title="Conduire"
+    title=""
     img="/Conduire_niveau2.png"
-    desc="Identifier les besoins métiers des clients et des utilisateurs"
+    ul={[
+      "- AC2 5.0 1 | Identifier les processus présents dans une organisation en vue d’améliorer les systèmes d’information",
+      "- AC2 5.0 2 | Formaliser les besoins du client et de l'utilisateur",
+      "- AC2 5.0 3 | Identifier les critères de faisabilité d’un projet informatique",
+      "- AC2 5.0 4 | Définir et mettre en œuvre une démarche de suivi de projet"
+    ]}
     url="#"
   />
   <HorizontalCard
-    title="Conduire"
+    title=""
     img="/Conduire_niveau3.png"
-    desc="Identifier les besoins métiers des clients et des utilisateurs"
+    ul={[
+      "- AC3 5.0 1 | Mesurer les impacts économiques, sociétaux et technologiques d’un projet informatique",
+      "- AC3 5.0 2 | Savoir intégrer un projet informatique dans le système d’information d’une organisation",
+      "- AC3 5.0 3 | Savoir adapter un système d’information"
+    ]}
     url="#"
   />
 
   <div class="divider my-0"></div>
+  <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="Collaborer"
+    title="Acquérir, développer et exploiter les aptitudes nécessaires pour travailler efficacement dans une équipe informatique."
     img="/Collaborer.png"
-    desc="Identifier ses aptitudes pour travailler dans une équipe"
+    desc=""
     url="#"
   />
   <HorizontalCard
-    title="Collaborer"
+    title=""
     img="/Collaborer_niveau1.png"
-    desc="Identifier ses aptitudes pour travailler dans une équipe"
+    ul={[
+      "- AC1 6.0 1 | Appréhender l’écosystème numérique",
+      "- AC1 6.0 2 | Découvrir les aptitudes requises selon les différents secteurs informatiques",
+      "- AC1 6.0 3 | Identifier les statuts, les fonctions et les rôles de chaque membre d’une équipe pluridisciplinaire",
+      "- AC1 6.0 4 | Acquérir les compétences interpersonnelles pour travailler en équipe"
+    ]}
     url="#"
   />
   <HorizontalCard
-    title="Collaborer"
+    title=""
     img="/Collaborer_niveau2.png"
-    desc="Identifier ses aptitudes pour travailler dans une équipe"
+    ul={[
+        "- AC2 6.0 1 | Comprendre la diversité, la structure et la dimension de l’informatique dans une organisation", 
+        "- AC2 6.0 2 | Appliquer une démarche pour intégrer une équipe informatique au sein d’une organisation",
+        "- AC2 6.0 3 | Mobiliser les compétences interpersonnelles pour travailler dans une équipe informatique",
+        "- AC2 6.0 4 | Rendre compte de son activité professionnelle"
+    ]}
     url="#"
   />
   <HorizontalCard
-    title="Collaborer"
+    title=""
     img="/Collaborer_niveau3.png"
-    desc="Identifier ses aptitudes pour travailler dans une équipe"
+    ul={[
+        "- AC3 6.0 1 | Organiser et partager une veille technologique et informationnelle",
+        "- AC3 6.0 2 | Identifier les enjeux de l’économie de l’innovation numérique",
+        "- AC3 6.0 3 | Guider la conduite du changement informatique au sein d’une organisation",
+        "- AC3 6.0 4 | Accompagner le management de projet informatique"
+    ]}
     url="#"
   />
   
