commit menu, projets, footer

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,37 +11,54 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <HorizontalCard
     title="SAE BUT2"
     img="/SAE_BUT2.png"
-    desc="Création d'une application pour un client."
+    desc="Création d'une application de gestion des biens immobiliers."
     url="#"
     badge="JAVA , OracleSQL, PLSQL, WindowBuilder"
   />
+
   <div class="divider my-0"></div>
+
+  <HorizontalCard
+    title="SAE BUT1"
+    img="/SAE_BUT1_sudoku.png"
+    desc="Algoritmhe de résolution de sudoku."
+    url="#"
+    badge="Ada"
+  />
+
+  <div class="divider my-0"></div>
+
   <HorizontalCard
     title="SAE BUT1"
     img="/SAE_BUT1_machinevirtuel.png"
     desc="installation et configuration d'un poste de travail"
     url="#"
   />
+
+  <div class="divider my-0"></div>
+
   <HorizontalCard
     title="SAE semestre 4 BUT2"
     img="/SAE_BUT2-4.png"
     desc="Visualiser les données 'brutes'"
     url="#"
   />
+
+  <div class="divider my-0"></div>
+
   <HorizontalCard
     title="SAE semestre 2 BUT1"
     img="/SAE_BUT1S2_cachier_charges.png"
-    desc="Projet organisation d'un triatlon"
+    desc="Organisation d'un triathlon"
     url="#"
-    badge="FOSS"
+    badge=""
   />
-  <div class="divider my-0"></div>
   
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="SAE semestre 4 BUT2"
+    title="SAE semestre 6 BUT3"
     img="/SAE_BUT2-3.png"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    desc="Travaille en équipe pour élaboration d'un modèle d'intelligence artificielle"
     url="#"
   />
 </BaseLayout>
