--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -17,7 +17,7 @@ const { sideBarActiveItemID } = Astro.props;
     img="/Realiser.png"
     desc=""
     badge=""
-    url="#"
+    url="http://localhost:4321/projects"
   />
   <HorizontalCard
     title=""
@@ -49,7 +49,7 @@ const { sideBarActiveItemID } = Astro.props;
   <HorizontalCard
     title="Proposer des applications informatiques optimisées en fonction de critères spécifiques : temps d’exécution, précision, consommation de ressources."
     img="/Optimiser.png"
-    url="#"
+    url="http://localhost:4321/projects"
   />
   <HorizontalCard
     title=""
@@ -79,7 +79,7 @@ const { sideBarActiveItemID } = Astro.props;
     title="Installer, configurer, mettre à disposition, maintenir en conditions opérationnelles des infrastructures, des services et des réseaux et optimiser le système informatique d’une organisation."
     img="/Administrer.png"
     desc=""
-    url="#"
+    url="http://localhost:4321/projects"
   />
   <HorizontalCard
     title=""
@@ -112,7 +112,7 @@ const { sideBarActiveItemID } = Astro.props;
     title="Concevoir, gérer, administrer et exploiter les données de l’entreprise et mettre à disposition toutes les informations pour un bon pilotage de l’entreprise."
     img="/Gerer.png"
     desc=""
-    url="#"
+    url="http://localhost:4321/projects"
   />
   <HorizontalCard
     title=""
@@ -155,7 +155,7 @@ const { sideBarActiveItemID } = Astro.props;
     title="Satisfaire les besoins des utilisateurs au regard de la chaîne de valeur du client, organiser et piloter un projet informatique avec des méthodes classiques ou agiles."
     img="/Conduire.png"
     desc=""
-    url="#"
+    url="http://localhost:4321/projects"
   />
   <HorizontalCard
     title=""
@@ -196,7 +196,7 @@ const { sideBarActiveItemID } = Astro.props;
     title="Acquérir, développer et exploiter les aptitudes nécessaires pour travailler efficacement dans une équipe informatique."
     img="/Collaborer.png"
     desc=""
-    url="#"
+    url="http://localhost:4321/projects"
   />
   <HorizontalCard
     title=""
