--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -9,15 +9,12 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li><a class="py-3 text-base" id="projects" href="/projects">Projets</a></li>
     <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li>
     <li>
-        <a
-            class="py-3 text-base"
-            href="soumaya.seddiki@hotmail.com"
-            target="_blank"
-            referrerpolicy="no-referrer-when-downgrade">Contact</a
-        >
-    </li>
-    
-    
+    <a
+        class="py-3 text-base"
+        href="mailto:soumaya.seddiki@hotmail.com"
+        target="_blank"
+        referrerpolicy="no-referrer-when-downgrade">Contact</a>
+    </li>      
 </ul>
 
 <script define:vars={{ sideBarActiveItemID: sideBarActiveItemID, activeClass: activeClass }}>
