--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -21,7 +21,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <HorizontalCard
     title="SAE BUT1"
     img="/SAE_BUT1_sudoku.png"
-    desc="Algoritmhe de résolution de sudoku."
+    desc="Algorithme de résolution de sudoku."
     url="#"
     badge="Ada"
   />
