--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,9 +9,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   </div>
 
   <HorizontalCard
-    title="SAE BUT2"
+    title="Création d'une application de gestion des biens immobiliers"
     img="/SAE_BUT2.png"
-    desc="Création d'une application de gestion des biens immobiliers."
+    desc="SAE BUT2"
     url="#"
     badge="JAVA , OracleSQL, PLSQL, WindowBuilder"
   />
@@ -19,9 +19,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="SAE BUT1"
+    title="Algorithme de résolution de sudoku"
     img="/SAE_BUT1_sudoku.png"
-    desc="Algorithme de résolution de sudoku."
+    desc="SAE BUT1"
     url="#"
     badge="Ada"
   />
@@ -29,36 +29,39 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="SAE BUT1"
+    title="Installation et configuration d'un poste de travail"
     img="/SAE_BUT1_machinevirtuel.png"
-    desc="installation et configuration d'un poste de travail"
+    desc="SAE BUT1"
     url="#"
+    badge="Owncload"
   />
 
   <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="SAE semestre 4 BUT2"
+    title="Visualisation de données scientifiques les données 'brutes'"
     img="/SAE_BUT2-4.png"
-    desc="Visualiser les données 'brutes'"
+    desc=" SAE BUT2 semestre 4"
     url="#"
+    badge="Dgango, MongoDB, Streamlit"
   />
 
   <div class="divider my-0"></div>
 
   <HorizontalCard
-    title="SAE semestre 2 BUT1"
+    title="Organisation d'un triathlon"
     img="/SAE_BUT1S2_cachier_charges.png"
-    desc="Organisation d'un triathlon"
+    desc="SAE BUT1 semestre 2"
     url="#"
-    badge=""
+    badge="Grap"
   />
   
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="SAE semestre 6 BUT3"
+    title="Travaille en équipe pour élaboration d'un modèle d'intelligence artificielle"
     img="/SAE_BUT2-3.png"
-    desc="Travaille en équipe pour élaboration d'un modèle d'intelligence artificielle"
+    desc="SAE BUT3 semestre 6"
     url="#"
+    badge="Python, Skelearn, Pytorch, Bert"
   />
 </BaseLayout>
