commit update erreur

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -8,7 +8,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Soumaya Seddiki</div>
   </div>
   <div class="mb-10 text-justify">
-     Étudiante en 2ème année de BUT informatique au sein de l'Université Paul Sabatier de Toulouse. 
+     Étudiante en 3ème année de BUT informatique au sein de l'Université Paul Sabatier de Toulouse. 
      Créative et débrouillarde, je saurai apporter de nouvelles idées aux projets qui me seront délégués. 
      Mes nombreux projets m'ont permis de développer mon esprit d'équipe et d'être polyvalente, ainsi, 
      je réaliserai des missions pour l'entreprise. 
@@ -108,7 +108,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </br>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Savoir être</div>
+    <div class="text-3xl w-full font-bold">Savoir-être</div>
   </div>
   <ul class="list-disc md:columns-5 columns-2 mx-6">
     <li>Créative</li>
@@ -123,7 +123,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </br>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Centre d'intérêt</div>
+    <div class="text-3xl w-full font-bold">Centres d'intérêts</div>
   </div>
   <ul class="list-disc md:columns-5 columns-2 mx-6">
     <li>Basket en club </br>| 10 ans</li>
