--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const last_posts = posts.slice(0, 3);
   <div class="pb-12 mt-5">
     
     <div class="text-5xl font-bold">Je suis Soumaya</div>
-    <div class="text-3xl py-3 font-bold">Etudiante en 3 ème années de BUT informatique</div>
+    <div class="text-3xl py-3 font-bold">Étudiante en 3 ème année de BUT informatique</div>
     <div class="py-2">
       <text class="text-lg">
          au sein de l'Université Paul Sabatier de Toulouse. 
