--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout title = "Projects" sideBarActiveItemID="projects">
   <div>
-    <div class="text-3xl w-full font-bold mb-5">Projects universitaires</div>
+    <div class="text-3xl w-full font-bold mb-5">Projets universitaires</div>
   </div>
 
   <HorizontalCard
@@ -58,7 +58,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Travaille en équipe pour élaboration d'un modèle d'intelligence artificielle"
+    title="Travail en équipe pour élaboration d'un modèle d'intelligence artificielle"
     img="/SAE_BUT2-3.png"
     desc="SAE BUT3 semestre 6"
     url="#"
